<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

 <FrameLayout
      android:layout_width="320dp"
      android:layout_height="400dp"
      android:layout_marginTop="10dp"
      android:layout_centerInParent="true"
      >

      <androidx.cardview.widget.CardView

          android:layout_centerInParent="true"
          android:layout_width="320dp"
          android:layout_marginTop="20dp"
          android:layout_height="350dp"
          android:id="@+id/Regcv"
          android:elevation="3dp"
          app:cardCornerRadius="3dp"
          app:cardUseCompatPadding="true"
          app:cardBackgroundColor="@color/colorGreen"
          >
          <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <LinearLayout
                  android:layout_marginTop="20dp"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                  <TextView
                      android:textColor="@color/colorWhite"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/SignUp"
                      android:textSize="9pt"
                      android:layout_marginStart="20dp"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="30dp"
                      android:textStyle="bold"
                      />


              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginLeft="30dp"
                  android:layout_marginEnd="30dp">
                  <com.google.android.material.textfield.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:theme="@style/TextLabel"
                      android:textColorHint="@color/colorWhite"

                      >

                      <EditText
                          android:id="@+id/regEmail"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/edEmail"
                          android:textSize="13sp"
                          android:textCursorDrawable="@drawable/bg_input_cursor_2"
                          android:background="@drawable/bg_edit_selector"
                          android:paddingBottom="2dp"
                          android:textColor="@color/colorWhite"
                          android:textColorHint="@color/colorCustomGrey"


                          />

                  </com.google.android.material.textfield.TextInputLayout>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginLeft="30dp"
                  android:layout_marginEnd="30dp">
                  <com.google.android.material.textfield.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:theme="@style/TextLabel"
                      android:textColorHint="@color/colorWhite"
                      >

                      <EditText
                          android:textColorHint="@color/colorWhite"
                          android:textColor="@color/colorWhite"
                          android:id="@+id/regPassword"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/edPassword"
                          android:textSize="13sp"
                          android:background="@drawable/bg_edit_selector"
                          android:paddingBottom="2dp"
                          android:textCursorDrawable="@drawable/bg_input_cursor_2"
                          android:inputType="textPassword"

                          />

                  </com.google.android.material.textfield.TextInputLayout>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginLeft="30dp"
                  android:layout_marginEnd="30dp">

                  <com.google.android.material.textfield.TextInputLayout

                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:textColorHint="@color/colorWhite"
                      android:theme="@style/TextLabel">

                      <EditText
                          android:id="@+id/regConfirmPass"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/bg_edit_selector"
                          android:hint="@string/edConPass"
                          android:inputType="textPassword"
                          android:paddingBottom="2dp"
                          android:textColor="@color/colorWhite"
                          android:textCursorDrawable="@drawable/bg_input_cursor_2"
                          android:textSize="13sp"

                          />

                  </com.google.android.material.textfield.TextInputLayout>

              </LinearLayout>

              <Button
                  android:id="@+id/btRegister"
                  android:layout_width="150dp"
                  android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="20dp"
                  android:background="@drawable/bt_shape_2"
                  android:stateListAnimator="@drawable/state_list_animator_z"
                  android:text="@string/register"
                  android:textColor="#2fa881"

                  />

          </LinearLayout>





      </androidx.cardview.widget.CardView>

      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/fab"
          android:layout_width="wrap_content"
          android:layout_height="100dp"
          android:layout_gravity="center_horizontal|top"
          android:src="@drawable/ic_close"
          android:transitionName="loginFab"
          app:backgroundTint="@color/colorGreen"
          app:fabSize="normal" />


  </FrameLayout>



</RelativeLayout>
